--- a/.github/workflows/apply-terraform.yml
+++ b/.github/workflows/apply-terraform.yml
@@ -1,6 +1,10 @@
 name: 'Terraform Plan  and Apply'
 
 on:
+  workflow_run:
+    workflows: ['Terraform Test']
+    types:
+      - completed
   push:
     branches: [ "main" ]
   pull_request:
