Ensure workflow_run trigger not causes duplicate triggers in the apply terraform workflow

--- a/.github/workflows/apply-terraform.yml
+++ b/.github/workflows/apply-terraform.yml
@@ -18,6 +18,7 @@ env:
 jobs:
   terraform-plan:
     name: 'Plan Terraform Job'
+    if: github.event_name == 'workflow_run'
     runs-on: ubuntu-latest
     
     steps:
