--- a/.github/workflows/apply-terraform.yml
+++ b/.github/workflows/apply-terraform.yml
@@ -66,4 +66,4 @@ jobs:
         name: terraform-plan # Name of the artifact to download
 
     - name: Terraform Apply
-      run: terraform apply -auto-approve ftplan
+      run: terraform apply -auto-approve terraform.plan
